kustomize/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-ingress
  namespace: backend
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
  - host: prototype.staging.sre.dapperlabs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prototype
            port:
              number: 80
